<resources>
    <string name="app_name">SpatialAudio</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="appidTV">AppID:</string>
    <string name="channelNameTV">Channel Name:</string>
    <string name="joinChannelBtnTxt">Join Channel</string>
    <string name="leaveChannelBtnTxt">Leave Channel</string>
    <string name="hearRangeTV">Hear Range:</string>
    <string name="teamIdTV">Team ID:</string>
    <string name="playerIdTV">Player ID:</string>
    <string name="audioModeTV">Audio Mode:</string>
    <string name="audio3dModeTV">3D Mode:</string>
</resources>