<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableViewGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:stretchColumns="1">
        <TableRow>

            <TextView
                android:id="@+id/txtView1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical|end"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/appidTV"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/appIdET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical|end"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/channelNameTV"/>

            <EditText
                android:id="@+id/channelNameET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/joinChannelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/joinChannelBtnTxt"/>

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical|end"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/hearRangeTV"/>

            <EditText
                android:id="@+id/hearRangeET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical|end"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/teamIdTV"/>

            <EditText
                android:id="@+id/teamIdET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical|end"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/playerIdTV"/>

            <EditText
                android:id="@+id/playerIdET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtView6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical|end"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/audioModeTV"/>

            <EditText
                android:id="@+id/audioModeET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtView7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical|end"
                android:text="@string/audio3dModeTV"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/audio3dModeET"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"/>

        </TableRow>
    </TableLayout>

</RelativeLayout>
